--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "restaurant-landing",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.3",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "next": "13.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  }
+	"name": "restaurant-landing",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next/font": "13.1.3",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.27",
+		"@types/react-dom": "18.0.10",
+		"next": "13.1.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "4.9.4"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"framer-motion": "^8.5.0",
+		"react-datepicker": "^4.8.0",
+		"react-icons": "^4.7.1",
+		"react-responsive-carousel": "^3.2.23",
+		"react-time-picker": "^5.2.0",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.4"
+	}
 }
